# mygame

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/save/: mod.rs
src/scenario/: loader.rs  mod.rs  types.rs
src/ui/: background.rs  character.rs  messenger.rs  mod.rs  system_buttons.rs
