[package]
name = "mygame_sample1"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
serde = { version = "1", features = ["derive"] }
ron = "0.8"
anyhow = "1"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 

[profile.release]
lto = "thin" 
codegen-units = 1
